# asio-loop

./: .clang-format  .gitignore  .pre-commit-config.yaml  a.py  b.py  e2e.py  meson.build  pyproject.toml  readme.md  renovate.json  requirements.txt  run_e2e.py
.github/workflows/: _build_wheels.yaml  build.yml
src/: a.py
src/asioloop/: __asioloop.pyi  __init__.py  asio.hxx  asioloop.cxx  common.hpp  common.hxx  common_types.py  eventloop.cxx  eventloop.hxx  server.py
subprojects/: boost.wrap  c-ares.wrap
subprojects/packagefiles/boost/: meson.build
subprojects/packagefiles/fmt-11.1.1/: meson.build
tests/e2e/: 00_import.py  01_empty.py  02_sleep.py  02_time.py  03_run_in_executor_getaddrinfo.py  04_getaddrinfo.py  04_getaddrinfo_default.py  04_getaddrinfo_pass.py  run_in_executor.py
