[build-system]
requires = [
    'meson-python==0.18.0',
    'meson[ninja]==1.8.0',
]

# conditional build c++ extension
build-backend = "mesonpy"

[project]
name = "asioloop"
version = "0.0.0"
description = "A asyncio eventloop based on boost.asio"
license = { text = "MIT" }
requires-python = ">=3.9,<4.0"
authors = [
    { name = "trim21", email = "trim21me@gmail.com" },
]
readme = 'readme.md'
keywords = [
]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
]

[project.urls]
Homepage = "https://github.com/trim21/asio-loop"
Repository = "https://github.com/trim21/asio-loop"
Issues = "https://github.com/trim21/asio-loop/issues"

[tool.meson-python.args]
setup = ['--errorlogs']
dist = ['--verbose']
compile = ['--verbose']
install = [
    '--verbose',
    # exclude .lib file in windows
    # https://github.com/mesonbuild/meson-python/issues/552#issuecomment-1863039032
    '--tags=runtime,python-runtime',
]

[tool.pytest.ini_options]
norecursedirs = ['vendor', '.venv', 'build', 'subprojects']

[tool.cibuildwheel]
skip = 'pp* *musl*'
# enable = ['cpython-freethreading']
environment = { 'UV_LINK_MODE' = 'copy' }

[tool.cibuildwheel.linux]
before-all = "uv tool install sccache"
environment-pass = ['SCCACHE_GHA_ENABLED', 'ACTIONS_CACHE_URL', 'ACTIONS_RUNTIME_TOKEN']
environment = { "PATH" = "$PATH:/root/.local/bin" }

[tool.black]
extend-exclude = 'vendor'
target-version = ['py39']
line-length = 88

[tool.ruff]
target-version = 'py39'
line-length = 88
extend-exclude = ['vendor', 'subprojects']

src = ['src', 'tests']

[tool.ruff.lint]
extend-select = ['UP', 'I', 'E', "W", 'FA']
ignore = ['E721', 'E501', 'UP032']

[tool.coverage.run]
source = [
    "src",
]

[tool.mypy]
exclude = ['tests', 'vendor']
python_version = "3.9"
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
show_error_codes = true
